# magpie

./: .gitignore  Cargo.toml  Dockerfile  README.md  login.py  main.py  regions.csv  scrape.py
.circleci/: config.yml
src/: app.rs  loc.rs  login.rs  main.rs  parse.rs  row.rs  run_location.rs  run_scraper.rs  scrape_params.rs  scraper.rs  selectors.rs  table.rs
src/location/: country.rs  df.rs  hotspot.rs  loc.rs  location.rs  mod.rs  regions.rs  selectors.rs
src/scraper/: mod.rs  row.rs  scrape_page.rs  scrape_params.rs  scrape_table.rs  scraper.rs  selectors.rs  table.rs  utils.rs
