[package]
name = "magpie-bird"
version = "0.1.4"
authors = ["DanielMorton <dacmorton@gmail.com>"]
description = "eBird Target Bird Scraper"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DanielMorton/magpie"
edition = "2021"
exclude = [
    ".idea/*",
    "magpie.iml"
]

[dependencies]
clap = "4.5.10"
itertools = "0.13.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rpassword = "7.3.1"
scraper = "0.18.1"
strum = "0.26.1"
strum_macros = "0.26.1"

[dependencies.indicatif]
version = "0.17.8"
features = ["rayon"]

[dependencies.polars]
version = "0.41.3"
features = ["diagonal_concat", "lazy", "temporal"]

[dependencies.reqwest]
version = "0.11.24"
features = ["blocking", "cookies", "json"]