[package]
name = "magpie-bird"
version = "0.2.1"
authors = ["DanielMorton <dacmorton@gmail.com>"]
description = "eBird Target Bird Scraper"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DanielMorton/magpie"
edition = "2021"
exclude = [
    ".idea/*",
    "magpie.iml"
]

[dependencies]
clap = "4.5.16"
itertools = "0.13.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rpassword = "7.3.1"
scraper = "0.20.0"
strum = "0.26.3"
strum_macros = "0.26.4"

[dependencies.indicatif]
version = "0.17.8"
features = ["rayon"]

[dependencies.polars]
version = "0.42.0"
features = ["diagonal_concat", "lazy", "temporal"]

[dependencies.reqwest]
version = "0.12.7"
features = ["blocking", "cookies", "json"]